Video editing crash #91873

Closed
opened 2021-10-01 13:13:57 +02:00 by fwfeet · 20 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-30 23:27, hash: 3a59ddb292
Caused by 5cebcb415e

Short description of error
When you press N to bring out the side panel in video editing layout blender crashes

Exact steps for others to reproduce the error

  • Open blender and choose video editing
  • Add color in the sequencer
  • Press {key N} when cursor is over the preview tab
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-30 23:27, hash: `3a59ddb292` Caused by 5cebcb415e **Short description of error** When you press N to bring out the side panel in video editing layout blender crashes **Exact steps for others to reproduce the error** - Open blender and choose video editing - Add color in the sequencer - Press {key N} when cursor is over the preview tab
Author

Added subscriber: @costa

Added subscriber: @costa

#91928 was marked as duplicate of this issue

#91928 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Introduced recently between e81533b25e- 84dcf12ceb

Will search for the exact commit

Hi, thanks for the report. Introduced recently between `e81533b25e`- `84dcf12ceb` Will search for the exact commit
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member
Caused by 5cebcb415e cc @filedescriptor

Added subscriber: @iss

Added subscriber: @iss

I can't reproduce this issue. @PratikPB2123 can you give stack trace?

In 3rd step, when I press N, it hides side panel, because VSE has side panel open by default. But I don't think this si indicative of anything here.

I can't reproduce this issue. @PratikPB2123 can you give stack trace? In 3rd step, when I press N, it hides side panel, because VSE has side panel open by default. But I don't think this si indicative of anything here.
Member

@iss Are you on windows? This could be a memory corruption issue that only causes a crash on windows. Maybe an ASAN debug build would help.

@iss Are you on windows? This could be a memory corruption issue that only causes a crash on windows. Maybe an ASAN debug build would help.

I am on windows. ASAN here is bit inferior I think it only reveals write past allocated memory on stack.

I am on windows. ASAN here is bit inferior I think it only reveals write past allocated memory on stack.

Added subscriber: @tintwotin

Added subscriber: @tintwotin

This one is pretty bad. Crashing all the time with anything sidebar or region like swap region(here on Windows)

This one is pretty bad. Crashing all the time with anything sidebar or region like swap region(here on Windows)
Member

it hides side panel, because VSE has side panel open by default.

Hi @iss , I think one step is missing in the description. Try to press {key N} when cursor is over the Preview tab

can you give stack trace?

I am not able to redo this on debug build (lite)

blender.exe         :0x00007FF6B2C410F0  ED_region_panels_draw
blender.exe         :0x00007FF6B2C3FC70  ED_region_do_draw
blender.exe         :0x00007FF6B270DEF0  wm_draw_window_offscreen
blender.exe         :0x00007FF6B270DD40  wm_draw_window
blender.exe         :0x00007FF6B270D840  wm_draw_update
blender.exe         :0x00007FF6B26E88C0  WM_main
blender.exe         :0x00007FF6B236F0E0  main
blender.exe         :0x00007FF6B77C2208  __scrt_common_main_seh
KERNEL32.DLL        :0x00007FFA55A87020  BaseThreadInitThunk
ntdll.dll           :0x00007FFA572E2630  RtlUserThreadStart```
> it hides side panel, because VSE has side panel open by default. Hi @iss , I think one step is missing in the description. Try to press {key N} when cursor is over the Preview tab > can you give stack trace? I am not able to redo this on debug build (lite) ```blender.exe :0x00007FF6B2FEA8D0 UI_panel_category_draw_all blender.exe :0x00007FF6B2C410F0 ED_region_panels_draw blender.exe :0x00007FF6B2C3FC70 ED_region_do_draw blender.exe :0x00007FF6B270DEF0 wm_draw_window_offscreen blender.exe :0x00007FF6B270DD40 wm_draw_window blender.exe :0x00007FF6B270D840 wm_draw_update blender.exe :0x00007FF6B26E88C0 WM_main blender.exe :0x00007FF6B236F0E0 main blender.exe :0x00007FF6B77C2208 __scrt_common_main_seh KERNEL32.DLL :0x00007FFA55A87020 BaseThreadInitThunk ntdll.dll :0x00007FFA572E2630 RtlUserThreadStart```

When adding a color strip, a Strip tab is added to the Preview, when this is exposed Blender crashes when ex. changing the width of the sidebar.
{F10728983,size=full}

When adding a color strip, a Strip tab is added to the Preview, when this is exposed Blender crashes when ex. changing the width of the sidebar. {[F10728983](https://archive.blender.org/developer/F10728983/color_strip_crash.gif),size=full}

@filedescriptor It is caused by missing polls in the color tag patch. This should be dealt with within the operator, but here's some code which does it in the UI code, just for checking: https://developer.blender.org/P2473

@filedescriptor It is caused by missing polls in the color tag patch. This should be dealt with within the operator, but here's some code which does it in the UI code, just for checking: https://developer.blender.org/P2473
Member

@tintwotin Thanks. I'll try and fix it

@tintwotin Thanks. I'll try and fix it
Member

Added subscriber: @Alumx

Added subscriber: @Alumx

This issue was referenced by fc6228bd85

This issue was referenced by fc6228bd8528629da63cd9b5d012b36e0e5e9fee
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Falk David self-assigned this 2021-10-04 08:16:11 +02:00
Sign in to join this conversation.
7 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#91873
No description provided.